<resources>
    <string name="app_name">CreateEven2</string>
    <string name="var1">ini pesan</string>
    <string name="edEmail">Email</string>
    <string name="edPassword">Password</string>
    <string name="txtLogin">Login</string>
    <string name="btSingin">Sing In</string>
    <string name="tData">Data Anda</string>
    <string name="tEmail">Email: </string>
    <string name="tPassword">Password: </string>
    <string name="txtemail">Ini hasil Email</string>
    <string name="txtpassword">Ini hasil Password</string>
    <string name="label2">Login Berhasil</string>
    <string name="Logo">logoLogin</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Daftar</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="todo">TODO</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telepon</string>
</resources>